--- a/vue_src/package.json
+++ b/vue_src/package.json
@@ -1,21 +1,22 @@
 {
   "name": "vue-anychart",
   "version": "1.0.0",
+  "private": true,
   "description": "A Vue.js project",
   "author": "FilippovAM <andrey.filippov@anychart.com>",
-  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev"
   },
   "dependencies": {
-    "anychart": "^8.1.0",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.0.0",
-    "vue": "^2.5.2",
-    "vue-resource": "^1.5.1"
+    "anychart": "~8.8.0",
+    "axios": "~0.19.2",
+    "bootstrap": "~4.5.2",
+    "vue": "~2.6.12",
+    "vue-resource": "~1.5.1",
+    "vue-tabs-component": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
